--- a/Movie Recommendor.ipynb
+++ b/Movie Recommendor.ipynb
@@ -550,6 +550,101 @@
    "source": [
     "movies.head(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "237f1b96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movie_id    0\n",
+       "title       0\n",
+       "overview    3\n",
+       "genres      0\n",
+       "keywords    0\n",
+       "cast        0\n",
+       "crew        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5d164a73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6f1d4a78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movie_id    0\n",
+       "title       0\n",
+       "overview    0\n",
+       "genres      0\n",
+       "keywords    0\n",
+       "cast        0\n",
+       "crew        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6fc222c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95753364",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
