--- a/Movie Recommendor.ipynb
+++ b/Movie Recommendor.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
    "id": "cce90769",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import ast"
+    "import ast\n",
+    "import nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "id": "d38a5901",
    "metadata": {},
    "outputs": [],
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "id": "12dee5c3",
    "metadata": {},
    "outputs": [
@@ -264,7 +265,7 @@
        "4                               John Carter           6.1        2124  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "id": "a025ee54",
    "metadata": {},
    "outputs": [
@@ -326,7 +327,7 @@
        "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "id": "bcb34c2d",
    "metadata": {},
    "outputs": [],
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 46,
    "id": "cc67116a",
    "metadata": {},
    "outputs": [
@@ -456,7 +457,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 47,
    "id": "46061e83",
    "metadata": {},
    "outputs": [],
@@ -477,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 48,
    "id": "f29cdfca",
    "metadata": {},
    "outputs": [
@@ -543,7 +544,7 @@
        "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 49,
    "id": "237f1b96",
    "metadata": {},
    "outputs": [
@@ -571,7 +572,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 50,
    "id": "5d164a73",
    "metadata": {},
    "outputs": [],
@@ -592,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 51,
    "id": "6f1d4a78",
    "metadata": {},
    "outputs": [
@@ -609,7 +610,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 52,
    "id": "6fc222c3",
    "metadata": {},
    "outputs": [
@@ -630,7 +631,7 @@
        "0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 53,
    "id": "95753364",
    "metadata": {},
    "outputs": [],
@@ -655,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 54,
    "id": "c4741477",
    "metadata": {},
    "outputs": [],
@@ -665,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 55,
    "id": "2ef6cbb2",
    "metadata": {},
    "outputs": [
@@ -766,7 +767,7 @@
        "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 56,
    "id": "d1493d70",
    "metadata": {},
    "outputs": [],
@@ -787,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 57,
    "id": "ccafbea5",
    "metadata": {},
    "outputs": [
@@ -888,7 +889,7 @@
        "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 58,
    "id": "381d1330",
    "metadata": {},
    "outputs": [],
@@ -917,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 59,
    "id": "c6e3ac7e",
    "metadata": {},
    "outputs": [],
@@ -928,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 60,
    "id": "3a60f158",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1030,7 @@
        "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 61,
    "id": "c3965755",
    "metadata": {},
    "outputs": [],
@@ -1056,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 62,
    "id": "6466b7e2",
    "metadata": {},
    "outputs": [],
@@ -1066,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 63,
    "id": "d316aaff",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1163,7 @@
        "2      [Daniel Craig, Christoph Waltz, Léa Seydoux]      [Sam Mendes]  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 64,
    "id": "aca1182d",
    "metadata": {},
    "outputs": [],
@@ -1183,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 65,
    "id": "16f1fe61",
    "metadata": {},
    "outputs": [
@@ -1279,7 +1280,7 @@
        "2      [Daniel Craig, Christoph Waltz, Léa Seydoux]      [Sam Mendes]  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1290,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 66,
    "id": "6bd45774",
    "metadata": {},
    "outputs": [],
@@ -1303,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 67,
    "id": "d295b2b5",
    "metadata": {},
    "outputs": [
@@ -1429,7 +1430,7 @@
        "4    [TaylorKitsch, LynnCollins, SamanthaMorton]     [AndrewStanton]  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 68,
    "id": "b29c1177",
    "metadata": {},
    "outputs": [],
@@ -1450,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 69,
    "id": "cc7d9c27",
    "metadata": {},
    "outputs": [],
@@ -1460,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 70,
    "id": "de6f9394",
    "metadata": {},
    "outputs": [
@@ -1592,7 +1593,7 @@
        "[4806 rows x 3 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 71,
    "id": "dee0ea96",
    "metadata": {},
    "outputs": [
@@ -1611,7 +1612,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_2328\\3243403044.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_3276\\3243403044.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1626,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 72,
    "id": "341a96e5",
    "metadata": {},
    "outputs": [
@@ -1758,7 +1759,7 @@
        "[4806 rows x 3 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1769,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 73,
    "id": "2af62afe",
    "metadata": {},
    "outputs": [
@@ -1777,7 +1778,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_2328\\1436014886.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_3276\\1436014886.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1792,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 74,
    "id": "23ce2150",
    "metadata": {},
    "outputs": [
@@ -1873,7 +1874,7 @@
        "4  john carter is a war-weary, former military ca...  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1881,6 +1882,206 @@
    "source": [
     "new_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "2f09bf3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem.porter import PorterStemmer\n",
+    "ps = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "a4f6d240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stem(text):\n",
+    "    y = []\n",
+    "    for i in text.split():\n",
+    "        y.append(ps.stem(i))\n",
+    "    \n",
+    "    return \" \".join(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "9cc9afb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_3276\\4074900442.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  new_df['tag'] = new_df['tag'].apply(stem)\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_df['tag'] = new_df['tag'].apply(stem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "b6f6e0eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "cv = CountVectorizer(max_features=5000, stop_words='english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "5dcbca29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectors = cv.fit_transform(new_df['tag']).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "c23d75e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "dc61362d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['000', '007', '10', ..., 'zone', 'zoo', 'zooeydeschanel'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "5b3c4902",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "69978f7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity = cosine_similarity(vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "98f773b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend(movie):\n",
+    "    movie_index = new_df[new_df['title'] == movie].index[0]\n",
+    "    distances = similarity[movie_index]\n",
+    "    movies_list = sorted(list(enumerate(distances)), reverse=True, key=lambda x:x[1])[1:21]\n",
+    "\n",
+    "    for i in movies_list:\n",
+    "        print(new_df.iloc[i[0]].title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "3d203089",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batman\n",
+      "Batman & Robin\n",
+      "The Dark Knight Rises\n",
+      "Batman Begins\n",
+      "Batman Returns\n",
+      "Batman Forever\n",
+      "The Dark Knight\n",
+      "Batman v Superman: Dawn of Justice\n",
+      "Batman\n",
+      "Defendor\n",
+      "Superman\n",
+      "Spider-Man 2\n",
+      "Amidst the Devil's Wings\n",
+      "The Shadow\n",
+      "The Last Legion\n",
+      "Superman II\n",
+      "Suicide Squad\n",
+      "We Were Soldiers\n",
+      "Mi America\n",
+      "Wicked Blood\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend('Batman')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14cd80d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
