--- a/Movie Recommendor.ipynb
+++ b/Movie Recommendor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "id": "cce90769",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "d38a5901",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "12dee5c3",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
        "4                               John Carter           6.1        2124  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "a025ee54",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
        "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "bcb34c2d",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "cc67116a",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "46061e83",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "f29cdfca",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
        "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "237f1b96",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "id": "5d164a73",
    "metadata": {},
    "outputs": [],
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "6f1d4a78",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "6fc222c3",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "95753364",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "id": "c4741477",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "id": "2ef6cbb2",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "id": "d1493d70",
    "metadata": {},
    "outputs": [],
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "id": "ccafbea5",
    "metadata": {},
    "outputs": [
@@ -889,7 +889,7 @@
        "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "id": "381d1330",
    "metadata": {},
    "outputs": [],
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "id": "c6e3ac7e",
    "metadata": {},
    "outputs": [],
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "id": "3a60f158",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1030,7 @@
        "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "id": "c3965755",
    "metadata": {},
    "outputs": [],
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "id": "6466b7e2",
    "metadata": {},
    "outputs": [],
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "id": "d316aaff",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1163,7 @@
        "2      [Daniel Craig, Christoph Waltz, Léa Seydoux]      [Sam Mendes]  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "id": "aca1182d",
    "metadata": {},
    "outputs": [],
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "id": "16f1fe61",
    "metadata": {},
    "outputs": [
@@ -1280,7 +1280,7 @@
        "2      [Daniel Craig, Christoph Waltz, Léa Seydoux]      [Sam Mendes]  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "id": "6bd45774",
    "metadata": {},
    "outputs": [],
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "id": "d295b2b5",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1430,7 @@
        "4    [TaylorKitsch, LynnCollins, SamanthaMorton]     [AndrewStanton]  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "id": "b29c1177",
    "metadata": {},
    "outputs": [],
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "id": "cc7d9c27",
    "metadata": {},
    "outputs": [],
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "id": "de6f9394",
    "metadata": {},
    "outputs": [
@@ -1593,7 +1593,7 @@
        "[4806 rows x 3 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 31,
    "id": "dee0ea96",
    "metadata": {},
    "outputs": [
@@ -1612,7 +1612,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_3276\\3243403044.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_14888\\3243403044.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 32,
    "id": "341a96e5",
    "metadata": {},
    "outputs": [
@@ -1759,7 +1759,7 @@
        "[4806 rows x 3 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1770,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 33,
    "id": "2af62afe",
    "metadata": {},
    "outputs": [
@@ -1778,7 +1778,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_3276\\1436014886.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_14888\\1436014886.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1793,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "id": "23ce2150",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1874,7 @@
        "4  john carter is a war-weary, former military ca...  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 35,
    "id": "2f09bf3c",
    "metadata": {},
    "outputs": [],
@@ -1896,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 36,
    "id": "a4f6d240",
    "metadata": {},
    "outputs": [],
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 37,
    "id": "9cc9afb4",
    "metadata": {},
    "outputs": [
@@ -1919,7 +1919,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_3276\\4074900442.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_14888\\4074900442.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 38,
    "id": "b6f6e0eb",
    "metadata": {},
    "outputs": [],
@@ -1945,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "id": "5dcbca29",
    "metadata": {},
    "outputs": [],
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "id": "c23d75e9",
    "metadata": {},
    "outputs": [
@@ -1971,7 +1971,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1982,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 41,
    "id": "dc61362d",
    "metadata": {},
    "outputs": [
@@ -1993,7 +1993,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 42,
    "id": "5b3c4902",
    "metadata": {},
    "outputs": [],
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 43,
    "id": "69978f7c",
    "metadata": {},
    "outputs": [],
@@ -2024,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 44,
    "id": "98f773b9",
    "metadata": {},
    "outputs": [],
@@ -2040,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 46,
    "id": "3d203089",
    "metadata": {},
    "outputs": [
@@ -2048,40 +2048,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batman\n",
-      "Batman & Robin\n",
-      "The Dark Knight Rises\n",
-      "Batman Begins\n",
-      "Batman Returns\n",
-      "Batman Forever\n",
-      "The Dark Knight\n",
-      "Batman v Superman: Dawn of Justice\n",
-      "Batman\n",
-      "Defendor\n",
-      "Superman\n",
-      "Spider-Man 2\n",
-      "Amidst the Devil's Wings\n",
-      "The Shadow\n",
-      "The Last Legion\n",
-      "Superman II\n",
-      "Suicide Squad\n",
-      "We Were Soldiers\n",
-      "Mi America\n",
-      "Wicked Blood\n"
+      "Iron Man 3\n",
+      "Iron Man 2\n",
+      "Avengers: Age of Ultron\n",
+      "The Avengers\n",
+      "Captain America: Civil War\n",
+      "Guardians of the Galaxy\n",
+      "X-Men\n",
+      "Thor: The Dark World\n",
+      "Ant-Man\n",
+      "X-Men Origins: Wolverine\n",
+      "X-Men: Days of Future Past\n",
+      "X2\n",
+      "X-Men: The Last Stand\n",
+      "The Helix... Loaded\n",
+      "The Incredible Hulk\n",
+      "Hellboy II: The Golden Army\n",
+      "Teenage Mutant Ninja Turtles II: The Secret of the Ooze\n",
+      "Captain America: The First Avenger\n",
+      "The Wolverine\n",
+      "Thor\n"
      ]
     }
    ],
    "source": [
-    "recommend('Batman')"
+    "recommend('Iron Man')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14cd80d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
