--- a/Movie Recommendor.ipynb
+++ b/Movie Recommendor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "id": "cce90769",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import ast\n",
-    "import nltk"
+    "import nltk\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "d38a5901",
    "metadata": {},
    "outputs": [],
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "12dee5c3",
    "metadata": {},
    "outputs": [
@@ -265,7 +266,7 @@
        "4                               John Carter           6.1        2124  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "a025ee54",
    "metadata": {},
    "outputs": [
@@ -327,7 +328,7 @@
        "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "bcb34c2d",
    "metadata": {},
    "outputs": [],
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "cc67116a",
    "metadata": {},
    "outputs": [
@@ -457,7 +458,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "46061e83",
    "metadata": {},
    "outputs": [],
@@ -478,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "f29cdfca",
    "metadata": {},
    "outputs": [
@@ -544,7 +545,7 @@
        "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "237f1b96",
    "metadata": {},
    "outputs": [
@@ -572,7 +573,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "5d164a73",
    "metadata": {},
    "outputs": [],
@@ -593,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "6f1d4a78",
    "metadata": {},
    "outputs": [
@@ -610,7 +611,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "6fc222c3",
    "metadata": {},
    "outputs": [
@@ -631,7 +632,7 @@
        "0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "95753364",
    "metadata": {},
    "outputs": [],
@@ -656,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "c4741477",
    "metadata": {},
    "outputs": [],
@@ -666,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "2ef6cbb2",
    "metadata": {},
    "outputs": [
@@ -767,7 +768,7 @@
        "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "d1493d70",
    "metadata": {},
    "outputs": [],
@@ -788,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "ccafbea5",
    "metadata": {},
    "outputs": [
@@ -889,7 +890,7 @@
        "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "381d1330",
    "metadata": {},
    "outputs": [],
@@ -918,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "c6e3ac7e",
    "metadata": {},
    "outputs": [],
@@ -929,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "3a60f158",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1031,7 @@
        "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "c3965755",
    "metadata": {},
    "outputs": [],
@@ -1057,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "6466b7e2",
    "metadata": {},
    "outputs": [],
@@ -1067,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "d316aaff",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1164,7 @@
        "2      [Daniel Craig, Christoph Waltz, Léa Seydoux]      [Sam Mendes]  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "aca1182d",
    "metadata": {},
    "outputs": [],
@@ -1184,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "16f1fe61",
    "metadata": {},
    "outputs": [
@@ -1280,7 +1281,7 @@
        "2      [Daniel Craig, Christoph Waltz, Léa Seydoux]      [Sam Mendes]  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "id": "6bd45774",
    "metadata": {},
    "outputs": [],
@@ -1304,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "d295b2b5",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1431,7 @@
        "4    [TaylorKitsch, LynnCollins, SamanthaMorton]     [AndrewStanton]  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "b29c1177",
    "metadata": {},
    "outputs": [],
@@ -1451,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "cc7d9c27",
    "metadata": {},
    "outputs": [],
@@ -1461,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "id": "de6f9394",
    "metadata": {},
    "outputs": [
@@ -1593,7 +1594,7 @@
        "[4806 rows x 3 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "id": "dee0ea96",
    "metadata": {},
    "outputs": [
@@ -1612,7 +1613,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_14888\\3243403044.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Anjali08\\AppData\\Local\\Temp\\ipykernel_12660\\3243403044.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1627,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "341a96e5",
    "metadata": {},
    "outputs": [
@@ -1759,7 +1760,7 @@
        "[4806 rows x 3 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1770,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "2af62afe",
    "metadata": {},
    "outputs": [
@@ -1778,7 +1779,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_14888\\1436014886.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Anjali08\\AppData\\Local\\Temp\\ipykernel_12660\\1436014886.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1793,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "23ce2150",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1875,7 @@
        "4  john carter is a war-weary, former military ca...  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "2f09bf3c",
    "metadata": {},
    "outputs": [],
@@ -1896,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "a4f6d240",
    "metadata": {},
    "outputs": [],
@@ -1911,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "9cc9afb4",
    "metadata": {},
    "outputs": [
@@ -1919,7 +1920,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Prashant\\AppData\\Local\\Temp\\ipykernel_14888\\4074900442.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Anjali08\\AppData\\Local\\Temp\\ipykernel_12660\\4074900442.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1934,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "id": "b6f6e0eb",
    "metadata": {},
    "outputs": [],
@@ -1945,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "id": "5dcbca29",
    "metadata": {},
    "outputs": [],
@@ -1955,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "id": "c23d75e9",
    "metadata": {},
    "outputs": [
@@ -1971,7 +1972,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1982,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "id": "dc61362d",
    "metadata": {},
    "outputs": [
@@ -1993,7 +1994,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "id": "5b3c4902",
    "metadata": {},
    "outputs": [],
@@ -2014,7 +2015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "id": "69978f7c",
    "metadata": {},
    "outputs": [],
@@ -2024,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "id": "98f773b9",
    "metadata": {},
    "outputs": [],
@@ -2040,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "id": "3d203089",
    "metadata": {},
    "outputs": [
@@ -2074,11 +2075,62 @@
    "source": [
     "recommend('Iron Man')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "1306531d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(new_df,open('movies.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "9c400b2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Avatar', \"Pirates of the Caribbean: At World's End\", 'Spectre',\n",
+       "       ..., 'Signed, Sealed, Delivered', 'Shanghai Calling',\n",
+       "       'My Date with Drew'], dtype=object)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df['title'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "7aa3996b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(similarity,open('similarity.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df08bfb3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2092,7 +2144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
