made changes to UI

--- a/Movie Recommendor.ipynb
+++ b/Movie Recommendor.ipynb
@@ -2083,7 +2083,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(new_df,open('movies.pkl','wb'))"
+    "pickle.dump(new_df.to_dict(),open('movie_dict.pkl','wb'))"
    ]
   },
   {
